F-Curves. Restoring animation of linked bone after renaming in source file. Possible fix is attached. #47492

Closed
opened 2016-02-19 16:05:35 +01:00 by Alexander Romanov · 4 comments

Short description of error
Strange behavior of Dope Sheet editor.

Exact steps for others to reproduce the error

See https://youtu.be/fpChFj2sH5c

  1. Create a bone
  2. Add bone to a group (Ctrl+P)
  3. Save the file
  4. Create a new file
  5. link the group from previously created file
  6. Make proxy (Ctrl-Alt-P)
  7. Animate the bone
  8. Save the file
  9. Open the first file and rename the bone; Save the file.
  10. Open the the second file and see broken animation curves. Try to rename f-curves channels. And see the strange behavior. In some cases one left channel can even stay with a blank name without possibility to fix it.

I've attached a possible fix. diff

**Short description of error** Strange behavior of Dope Sheet editor. **Exact steps for others to reproduce the error** See https://youtu.be/fpChFj2sH5c 1) Create a bone 2) Add bone to a group (Ctrl+P) 3) Save the file 4) Create a new file 5) link the group from previously created file 6) Make proxy (Ctrl-Alt-P) 7) Animate the bone 8) Save the file 9) Open the first file and rename the bone; Save the file. 10) Open the the second file and see broken animation curves. Try to rename f-curves channels. And see the strange behavior. In some cases one left channel can even stay with a blank name without possibility to fix it. I've attached a possible fix. [diff](https://archive.blender.org/developer/F283933/diff)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @AlexanderRomanov

Added subscriber: @AlexanderRomanov
Joshua Leung self-assigned this 2016-02-20 04:39:51 +01:00

This issue was referenced by 86c55a18e5

This issue was referenced by 86c55a18e5f09f2cb46f2bfe27b6956dccc86b20
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47492
No description provided.