Fix T47492: Name is not displayed for newly renamed FCurve, when the path was broken

Thanks Alexander Romanov (a.romanov) for the fix!