source/blender/editors/animation/anim_channels_defines.c
@@ -4259,6 +4259,13 @@ void ANIM_channel_draw_widgets(const bContext *C, bAnimContext *ac, bAnimListEle
 			
 			UI_block_emboss_set(block, UI_EMBOSS_NONE);
 		}
+		else {
+			/* Cannot get property/cannot or rename for some reason, so clear rename index
+			 * so that this doesn't hang around, and the name can be drawn normally - T47492
+			 */
+			ac->ads->renameIndex = 0;
+			WM_event_add_notifier(C, NC_ANIMATION | ND_ANIMCHAN, NULL);
+		}
 	}
 	
 	/* step 5) draw mute+protection toggles + (sliders) ....................... */
